--- a/components/navbar8.html
+++ b/components/navbar8.html
@@ -60,14 +60,14 @@
         <header data-thq="thq-navbar" class="navbar8-navbar-interactive">
           <div data-thq="thq-navbar-nav" class="navbar8-desktop-menu">
             <nav class="navbar8-links1">
-              <a href="https://www.teleporthq.io">
+              <a href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D">
                 <fragment class="navbar8-fragment14">
                   <span class="navbar8-text18 thq-link thq-body-small">
                     #features
                   </span>
                 </fragment>
               </a>
-              <a href="https://www.teleporthq.io">
+              <a href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D">
                 <fragment class="navbar8-fragment12">
                   <span class="navbar8-text16 thq-link thq-body-small">
                     #about
@@ -75,7 +75,7 @@
                 </fragment>
               </a>
               <a
-                href="https://www.teleporthq.io"
+                href="https://www.linkedin.com/in/mosab-aboidrees-altraifi-yousif-041aaa83/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BQAeT4MnhSyWFehYzRgtUWQ%3D%3D"
                 target="_blank"
                 rel="noreferrer noopener"
               >
