--- a/contact.css
+++ b/contact.css
@@ -186,7 +186,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-.navbar8-page1-image1 {
+.navbar8-page1-image {
   width: 50px;
   height: 50px;
 }
@@ -208,7 +208,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-.navbar8-page2-image1 {
+.navbar8-page2-image {
   width: 50px;
   height: 50px;
 }
@@ -230,7 +230,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-.navbar8-page3-image1 {
+.navbar8-page3-image {
   width: 50px;
   height: 50px;
 }
@@ -242,7 +242,7 @@
   flex-shrink: 0;
   flex-direction: column;
 }
-.navbar8-page31 {
+.navbar8-page3 {
   font-style: normal;
   font-weight: 600;
 }
@@ -256,7 +256,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-.navbar8-page4-image1 {
+.navbar8-page4-image {
   width: 50px;
   height: 50px;
 }
@@ -280,114 +280,6 @@
   display: flex;
 }
 .navbar8-container6 {
-  top: 100%;
-  left: 0px;
-  width: 100%;
-  display: flex;
-  position: absolute;
-  align-items: center;
-  animation-name: fadeInDownBig;
-  animation-delay: 0s;
-  justify-content: center;
-  background-color: var(--dl-color-theme-neutral-light);
-  animation-duration: 300ms;
-  animation-direction: normal;
-  animation-iteration-count: 1;
-  animation-timing-function: ease;
-}
-.navbar8-link5-menu-list {
-  width: 100%;
-  display: grid;
-  padding: var(--dl-space-space-oneandhalfunits);
-  grid-gap: var(--dl-space-space-halfunit);
-  max-width: var(--dl-size-size-maxwidth);
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}
-.navbar8-menu-item5 {
-  gap: var(--dl-space-space-unit);
-  width: 100%;
-  cursor: pointer;
-  display: flex;
-  padding: var(--dl-space-space-oneandhalfunits);
-  align-self: stretch;
-  align-items: center;
-  text-decoration: none;
-}
-.navbar8-page1-image2 {
-  width: 30px;
-  height: 30px;
-}
-.navbar8-content5 {
-  display: flex;
-  flex-grow: 1;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.navbar8-menu-item6 {
-  gap: var(--dl-space-space-unit);
-  width: 100%;
-  cursor: pointer;
-  display: flex;
-  padding: var(--dl-space-space-oneandhalfunits);
-  align-self: stretch;
-  align-items: center;
-  text-decoration: none;
-}
-.navbar8-page2-image2 {
-  width: 30px;
-  height: 30px;
-}
-.navbar8-content6 {
-  display: flex;
-  flex-grow: 1;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.navbar8-menu-item7 {
-  gap: var(--dl-space-space-unit);
-  width: 100%;
-  cursor: pointer;
-  display: flex;
-  padding: var(--dl-space-space-oneandhalfunits);
-  align-self: stretch;
-  align-items: center;
-  text-decoration: none;
-}
-.navbar8-page3-image2 {
-  width: 30px;
-  height: 30px;
-}
-.navbar8-content7 {
-  display: flex;
-  flex-grow: 1;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.navbar8-page32 {
-  font-style: normal;
-  font-weight: 600;
-}
-.navbar8-menu-item8 {
-  gap: var(--dl-space-space-unit);
-  width: 100%;
-  cursor: pointer;
-  display: flex;
-  padding: var(--dl-space-space-oneandhalfunits);
-  align-self: stretch;
-  align-items: center;
-  text-decoration: none;
-}
-.navbar8-page4-image2 {
-  width: 30px;
-  height: 30px;
-}
-.navbar8-content8 {
-  display: flex;
-  flex-grow: 1;
-  align-items: flex-start;
-  flex-direction: column;
-}
-.navbar8-container7 {
   top: 0px;
   width: 100%;
   height: 100%;
@@ -488,9 +380,6 @@
   }
   .navbar8-container5 {
     grid-gap: 0;
-  }
-  .navbar8-link5-menu-list {
-    display: none;
   }
 }
 @media(max-width: 479px) {
